added link to first two nav buttons

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </div>
     <!--Navigation Bar-->
     <div class="topnav">
-        <a class="nav active" href="#Welcome">Welcome</a>
-        <a class="nav" href="#">Projects</a>
+        <a class="nav active" href="https://danielzlotchevsky.github.io/">Welcome</a>
+        <a class="nav" href="https://danielzlotchevsky.github.io/Projects">Projects</a>
         <a class="nav" href="#">Plans</a>
         <a class="nav" href="#">About Me</a>
         <a class="nav" href="#">Contact Me</a>
