--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
+    <!--#region Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta 
+    name="viewport" 
+    content='width=window-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
+    <!--#endregion Required meta tags -->
 
-    <!-- Bootstrap CSS -->
-    
+    <!--#region Style Links-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,18 +16,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="Global.css">
     <link rel="stylesheet" href="welcome.css">
-    <title>Daniel Zlotchevsky!</title>
+    <!--#endregion Style Links-->
+
+    <title>Daniel Zlotchevsky</title>
+
 </head>
 <body>
-  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
+    <!--#region Header/Footer-->
     <div class="header-medium">
-      <img height="293px" src="/images/NYCSkyline2.jpg" alt="">
+        <img class="header-image" src="/images/NYCSkyline2.jpg" alt="">
     </div>
-    <!--Navigation Bar-->
+    <div class="Footer"></div>
+    <!--#endregion Header/Footer-->
+
+    <!--#region Navigation Bar-->
     <div class="topnav">
         <a class="nav active" href="https://danielzlotchevsky.github.io/">Welcome</a>
         <a class="nav" href="https://danielzlotchevsky.github.io/Projects">Projects</a>
@@ -34,7 +42,9 @@
         <a class="nav" href="#">Contact Me</a>
         <img class="logo" src="/images/Apple.png" alt="">
     </div>
-    <!--creation of the welcome message-->
+    <!--#endregion Navigation Bar-->
+
+    <!--#region creation of the Main message-->
     <div class="text-container">
         <span class="letter1">W</span>
         <span class="letter2">e</span>
@@ -44,16 +54,24 @@
         <span class="letter6">m</span>
         <span class="letter7">e</span>
     </div>
-    <!--Self intro prior to video-->
+    <!--#endregion Creation of the Main message-->
+
+    <!--#region Self intro prior to video-->
     <div class="Dan-container">
       <span class="intro0">" </span>
       <span class="intro1">Who is...</span>
       <span class="intro2">Daniel Zlotchevsky?</span>
       <span class="intro3"> "</span>
     </div>
-    <!--Embedded video-->
+    <!--#endregion Self intro prior to video-->
+
+    <!--#region Embedded video-->
     <div class="video-container">
-      <iframe class="video" width="640" height="360" src="https://www.youtube.com/embed/5Peo-ivmupE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </div>
+      <iframe class="video" width="640" height="360" src="https://www.youtube.com/embed/5Peo-ivmupE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+    </div>
+    <!--#endregion Embedded video-->
+
+    <!--#region Welcome Page Cards-->
     <div class="card-master-container">
       <div class="card-container">
         <div class="card1" style="width: 18rem;">
@@ -78,5 +96,6 @@
         </div>
       </div>
     </div>
+    <!--#endregion Welcome Page Cards-->
 </body>
 </html>
