addedcursor tracking and btns, remove useless file

--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" href="Global.css">
     <!--#endregion Style Links-->
 
     <title>Daniel Zlotchevsky</title>
@@ -74,7 +74,8 @@
                 <div class="cardProj1-body">
                     <h5 class="cardProj1-title">PacMen</h5>
                     <p class="cardProj1-text">This progression project was made to work out systematically creating objects as well as controlling their boundries and motion.</p>
-                    <a id="Pacbtn" href="https://github.com/DanielZlotchevsky/PacMen-Exercise" class="btn btn-primary">PacMen</a>
+                    <a id="Pacbtn" href="https://github.com/DanielZlotchevsky/PacMen-Exercise" class="btn btn-primary">Github</a>
+                    <a id="Pacbtn" href="https://danielzlotchevsky.github.io/PacMen-Exercise/" class="btn btn-primary">Demo</a>
                 </div>
             </div>
         </div>
@@ -86,7 +87,8 @@
                 <div class="cardProj2-body">
                     <h5 class="cardProj2-title">Bus Tracking</h5>
                     <p class="cardProj2-text">This progression project was made to retrieve data from a third-party API, and then use said data to create a tracker. In this instance a bus tracker.</p>
-                    <a id="Busbtn" href="https://github.com/DanielZlotchevsky/Bus-Tracking" class="btn btn-primary">Bus Tracking</a>
+                    <a id="Busbtn" href="https://github.com/DanielZlotchevsky/Bus-Tracking" class="btn btn-primary">Github</a>
+                    <a id="Busbtn" href="https://danielzlotchevsky.github.io/Bus-Tracking/" class="btn btn-primary">Demo</a>
                 </div>
             </div>
         </div>
@@ -94,11 +96,12 @@
     <div class="projectCard3-container">
         <div class="card-container">
             <div class="cardProj3" style="width: 18rem;">
-                <img id="projBus" src="images/bus.png" class="card-img-top-right" alt="...">
+                <img id="projOwl" src="images/Owl.png" class="card-img-top-right" alt="...">
                 <div class="cardProj3-body">
-                    <h5 class="cardProj3-title">Bus Tracking</h5>
-                    <p class="cardProj3-text">This progression project was made to retrieve data from a third-party API, and then use said data to create a tracker. In this instance a bus tracker.</p>
-                    <a id="Eyebtn" href="https://github.com/DanielZlotchevsky/Bus-Tracking" class="btn btn-primary">Eye Balls</a>
+                    <h5 class="cardProj3-title">Cursor Tracking</h5>
+                    <p class="cardProj3-text">This project was done as a combination of CSS styling practice and cursor tracking. As a result, we have an owl that follows the mouse.</p>
+                    <a id="Eyebtn" href="https://github.com/DanielZlotchevsky/Tracking-Cursor-with-Eyes" class="btn btn-primary">Github</a>
+                    <a id="Eyebtn" href="https://github.com/DanielZlotchevsky/Tracking-Cursor-with-Eyes" class="btn btn-primary">Demo</a>
                 </div>
             </div>
         </div>
@@ -110,7 +113,7 @@
                 <div class="cardProj4-body">
                     <h5 class="cardProj4-title">GitHub</h5>
                     <p class="cardProj4-text">For all of my current public work, visit my Github repositories here! Any works that are completed or being worked on will be posted here</p>
-                    <a id="Githubbtn" href="https://github.com/DanielZlotchevsky/Bus-Tracking" class="btn btn-primary">Github</a>
+                    <a id="Githubbtn" href="https://github.com/DanielZlotchevsky?tab=repositories" class="btn btn-primary">Github</a>
                 </div>
             </div>
         </div>
