--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" href="Global.css">
     <!--#endregion Style Links-->
 
     <title>Daniel Zlotchevsky</title>
