added Copyright in footer

--- a/Projects.html
+++ b/Projects.html
@@ -30,7 +30,7 @@
     <div class="header-medium">
         <img class="header-image" src="/images/NYCSkyline2.jpg" alt="">
     </div>
-    <div class="Footer"></div>
+    <div class="Footer">©Copyright 2022, Daniel Zlotchevsky</div>
     <!--#endregion Header/Footer-->
 
     <!--#region Navigation Bar-->
