--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <!--#region Self intro prior to video-->
     <div class="Dan-container">
       <span class="intro0">" </span>
-      <span class="intro1">Who is...</span>
-      <span class="intro2">Daniel Zlotchevsky?</span>
+      <span class="intro1">I am...</span>
+      <span class="intro2">Daniel Zlotchevsky.</span>
       <span class="intro3"> "</span>
     </div>
     <!--#endregion Self intro prior to video-->
