Added link to demo

--- a/Projects.html
+++ b/Projects.html
@@ -101,7 +101,7 @@
                     <h5 class="cardProj3-title">Cursor Tracking</h5>
                     <p class="cardProj3-text">This project was done as a combination of CSS styling practice and cursor tracking. As a result, we have an owl that follows the mouse.</p>
                     <a id="Eyebtn" href="https://github.com/DanielZlotchevsky/Tracking-Cursor-with-Eyes" class="btn btn-primary">Github</a>
-                    <a id="Eyebtn" href="https://github.com/DanielZlotchevsky/Tracking-Cursor-with-Eyes" class="btn btn-primary">Demo</a>
+                    <a id="Eyebtn" href="https://danielzlotchevsky.github.io/Tracking-Cursor-with-Eyes/" class="btn btn-primary">Demo</a>
                 </div>
             </div>
         </div>
