--- a/index.html
+++ b/index.html
@@ -29,18 +29,17 @@
     
     <!--#region Header/Footer-->
     <div class="header-medium">
-        <img class="header-image" src="/images/NYCSkyline2.jpg" alt="">
+      <img class="header-image" src="/images/NYCSkyline2.jpg" alt="">
     </div>
-    <div class="Footer"></div>
+    <div class="Footer">©Copyright 2022, Daniel Zlotchevsky</div>
     <!--#endregion Header/Footer-->
+
 
     <!--#region Navigation Bar-->
     <div class="topnav">
         <a class="nav active" href="https://danielzlotchevsky.github.io/">Welcome</a>
         <a class="nav" href="https://danielzlotchevsky.github.io/Projects">Projects</a>
-        <a class="nav" href="#">Plans</a>
         <a class="nav" href="#">About Me</a>
-        <a class="nav" href="#">Contact Me</a>
         <img class="logo" src="/images/Apple.png" alt="">
     </div>
     <!--#endregion Navigation Bar-->
@@ -81,7 +80,7 @@
           <div class="card-body">
             <h5 class="card-title">Projects</h5>
             <p class="card-text">For a peek into my progression projects and current works in progress, click below!</p>
-            <a href="#" class="btn btn-primary">See Projects</a>
+            <a href="https://danielzlotchevsky.github.io/Projects" class="btn btn-primary">See Projects</a>
           </div>
         </div>
       </div>
@@ -93,6 +92,20 @@
           <div class="card2-body">
             <h5 class="card2-title">Known Languages</h5>
             <p class="card2-text">These are my current known languages. I plan to constantly update this list as I learn more!</p>
+          </div>
+        </div>
+      </div>
+      <div class="card3-container">
+        <div class="card3" style="width: 18rem;">
+          <div class="card3-body">
+            <h5 class="card3-title">Contact Me</h5>
+            <p class="card3-text">You can contact me at the following: </p>
+            <ul class="contactlist">
+              <li>Email: Daniel.Zlotchevsky@gmail.com</li>
+              <li>Phone: (917) 402-2602</li>
+              <li>GitHub: <a href="https://github.com/DanielZlotchevsky">https://github.com/DanielZlotchevsky</a></li>
+              <li>LinkedIn: <a href="linkedin.com/in/daniel-zlotchevsky-34aaa7232">linkedin.com/in/daniel-zlotchevsky-34aaa7232</a></li>
+            </ul>
           </div>
         </div>
       </div>
