--- a/Projects.html
+++ b/Projects.html
@@ -35,11 +35,9 @@
 
     <!--#region Navigation Bar-->
     <div class="topnav">
-        <a class="nav active" href="https://danielzlotchevsky.github.io/">Welcome</a>
-        <a class="nav" href="https://danielzlotchevsky.github.io/Projects">Projects</a>
-        <a class="nav" href="#">Plans</a>
+        <a class="nav" href="https://danielzlotchevsky.github.io/">Welcome</a>
+        <a class="nav active" href="https://danielzlotchevsky.github.io/Projects">Projects</a>
         <a class="nav" href="#">About Me</a>
-        <a class="nav" href="#">Contact Me</a>
         <img class="logo" src="/images/Apple.png" alt="">
     </div>
     <!--#endregion Navigation Bar-->
