Added about me paragraph

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -59,7 +59,10 @@
     <div class="AboutMe-container">
         <div class="AboutMe-intro">
             <h1 id="header">More about me</h1>
-            <p id="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p id="para">Hello! I am Daniel Zlotchevsky. I am 24 years old and after going through jobs in ndifferent feilds such as data entry, medical, managerial, and others, I felt that it was time to career swap into something that I found both interesting and challenging. I have always had a problem solving attitude and found joy in creating anything, and so, I felt that there was no better field that software dveloper. I look forward to expanding my knowledge in this field and working with amazing groups and teams.
+            
+            Aside from my interest in creating code and figuring out problems, I enjoy playing a variety of games (both video and physical), excersizing at the gym, and playing volleyball in my free time.
+            </p>
         </div>
     </div>
     <!--#endregion Project Intro-->
