added video and headshot

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="topnav">
         <a class="nav active" href="https://danielzlotchevsky.github.io/">Welcome</a>
         <a class="nav" href="https://danielzlotchevsky.github.io/Projects">Projects</a>
-        <a class="nav" href="#">About Me</a>
+        <a class="nav" href="https://danielzlotchevsky.github.io/AboutMe">About Me</a>
         <img class="logo" src="/images/Apple.png" alt="">
     </div>
     <!--#endregion Navigation Bar-->
@@ -67,8 +67,7 @@
 
     <!--#region Embedded video-->
     <div class="video-container">
-      <iframe class="video" width="640" height="360" src="https://www.youtube.com/embed/5Peo-ivmupE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
-    </div>
+      <iframe class="video" width="640" height="360" src="https://www.youtube.com/embed/We4CDnQMwaE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </div>
     <!--#endregion Embedded video-->
 
     <!--#region Welcome Page Cards-->
@@ -98,6 +97,7 @@
       <div class="card3-container">
         <div class="card3" style="width: 18rem;">
           <div class="card3-body">
+            <img class="headshot" src="Headshot.jpg" alt="">
             <h5 class="card3-title">Contact Me</h5>
             <p class="card3-text">You can contact me at the following: </p>
             <ul class="contactlist">
