added to projects

--- a/Projects.html
+++ b/Projects.html
@@ -59,7 +59,7 @@
     <div class="project-container">
         <div class="project-intro">
             <h1 id="header">Current Projects</h1>
-            <p id="para">The current projects displayed are currently just progression projects. They were created by following a relatively loose guidline provided by <a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding">MITxPro</a>. After understanding the concept of the assignment I worked to personalize each project and make them my own. Future personal endeavors will also be added here once they are ready, as well as any other interesting projects I manage to complete.</p>
+            <p id="para">The projects displayed are currently a mix of progression projects, and personal python projects. The progression projects were created by following a relatively loose guidline provided by <a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding">MITxPro</a>. After understanding the concept of the assignment I worked to personalize each project and make them my own. Future personal endeavors will also be added here once they are ready, as well as any other interesting projects I manage to complete.</p>
         </div>
     </div>
     <!--#endregion Project Intro-->
@@ -107,15 +107,27 @@
     <div class="projectCard4-container">
         <div class="card-container">
             <div class="cardProj4" style="width: 18rem;">
-                <img id="projGithub" src="images/GitHub icon.png" class="card-img-top-right" alt="...">
+                <img id="projGithub" src="images/Python Icon.png" class="card-img-top-right" alt="...">
                 <div class="cardProj4-body">
-                    <h5 class="cardProj4-title">GitHub</h5>
-                    <p class="cardProj4-text">For all of my current public work, visit my Github repositories here! Any works that are completed or being worked on will be posted here</p>
-                    <a id="Githubbtn" href="https://github.com/DanielZlotchevsky?tab=repositories" class="btn btn-primary">Github</a>
+                    <h5 class="cardProj4-title">Desktop Assistant</h5>
+                    <p class="cardProj4-text">As a step into the world of Python, I decided to create a Ddesktop assistant that listens to your voice, and follows predetermined commands.</p>
+                    <a id="Githubbtn" href="https://github.com/DanielZlotchevsky/Desktop-Assistant" class="btn btn-primary">Github</a>
                 </div>
             </div>
         </div>
     </div>
+    <div class="projectCard5-container">
+      <div class="card-container">
+          <div class="cardProj5" style="width: 18rem;">
+              <img id="projGithub" src="images/GitHub icon.png" class="card-img-top-right" alt="...">
+              <div class="cardProj5-body">
+                  <h5 class="cardProj5-title">GitHub</h5>
+                  <p class="cardProj5-text">For all of my current public work, visit my Github repositories here! Any works that are completed or being worked on will be posted here</p>
+                  <a id="Githubbtn" href="https://github.com/DanielZlotchevsky?tab=repositories" class="btn btn-primary">Github</a>
+              </div>
+          </div>
+      </div>
+  </div>
     <!--#endregion Project Cards-->
     
 </body>
