--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
           <img class="lang-icons" id="HTML-icon" src="images/HTML icon.png" alt="...">
           <img class="lang-icons" id="CSS-icon" src="images/CSS Icon.png" alt="...">
           <img class="lang-icons" id="JS-icon" src="images/JS Icon.png" alt="...">
+          <img class="lang-icons" id="PY-icon" src="images/Python Icon.png" alt="...">
           <div class="card2-body">
             <h5 class="card2-title">Known Languages</h5>
             <p class="card2-text">These are my current known languages. I plan to constantly update this list as I learn more!</p>
